feat: estilização da sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap");
+
+:root {
+  --font-color: #868a9b;
+  --font-color-black: #000;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Syne", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Syne", serif;
 }
 
 /* Reset CSS - Baseado no reset de Eric Meyer + otimizações modernas */
@@ -119,8 +123,7 @@ section {
 
 body {
   line-height: 1;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
+  font-family: "Syne", serif;
   background-color: #fff;
   color: #333;
 }
