feat: link do whatsapp

--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,11 @@ a {
   color: inherit;
 }
 
+.link {
+  color: #000;
+  text-decoration: underline;
+}
+
 /* Ajuste para botões */
 button {
   cursor: pointer;
