--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,10 @@ a {
   text-decoration: underline;
 }
 
+.link.error {
+  color: #4b0000;
+}
+
 /* Ajuste para botões */
 button {
   cursor: pointer;
